...
              ExcludeSemantics(
                child: Icon(Icons.info_outline, color: menuContentColor),
              ),
              const SizedBox(width: 12),
              Expanded(
                child: Text(
                  'About',
                  style: theme.textTheme.bodyLarge?.copyWith(
                    color: menuContentColor,
                  ),
                ),
              ),
            ],
...
